remove radius to prevent overlapping in navigation list item

--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ nav li {
   padding-left: 5px;
   line-height: 2;
   background-color: var(--content-design-background);
-  border-radius: 20%;
+
   font-size: 0.95rem;
 }
 
